# hvac-settings

./: .gitignore  LICENSE  README.md  lambda_function.py  pyproject.toml  test_lambda_function.py
.github/workflows/: validate.yml
hvac_settings/: __init__.py  safety.py  weather.py
tests/: __init__.py  test_safety.py  test_weather.py
weather_service/: README.md  test_weather_api.py  weather_api.py
